--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -12,7 +12,7 @@
 \author{\fontsize{14}{11.96}\selectfont JORGE MANRIQVE}
 \date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
-\setmainfont{Ecdotica}[BoldFont=,Numbers={OldStyle,Proportional}] %Modified XITS font with addition of TironianEt (U+204A) combinated with IFAO-Grec Unicode of Jean-Luc Fournet and Ralph Hancock with modified part of oldstyle figures and somes philological glyphs.
+\setmainfont{TemporaNR}[BoldFont=,Numbers={OldStyle,Proportional}] %Modified XITS font with addition of TironianEt (U+204A) combinated with IFAO-Grec Unicode of Jean-Luc Fournet and Ralph Hancock with modified part of oldstyle figures and somes philological glyphs.
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 %
