--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -12,7 +12,7 @@
 \author{\fontsize{14}{11.96}\selectfont JORGE MANRIQVE}
 \date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
-\setmainfont{TemporaNR}[BoldFont=,Numbers={OldStyle,Proportional}] %Modified XITS font with addition of TironianEt (U+204A) combinated with IFAO-Grec Unicode of Jean-Luc Fournet and Ralph Hancock with modified part of oldstyle figures and somes philological glyphs.
+\setmainfont{TemporaNR}[Numbers={OldStyle,Proportional}] %Modified XITS font with addition of TironianEt (U+204A) combinated with IFAO-Grec Unicode of Jean-Luc Fournet and Ralph Hancock with modified part of oldstyle figures and somes philological glyphs.
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 %
@@ -30,10 +30,11 @@
 \Xnumberonlyfirstinline
 \Xnumberonlyfirstintwolines
 \parindentX[E]
+\Xnotenumfont{\bfseries}
 \Xsymlinenum{\char"02016}
 \Xbeforesymlinenum{-0.6em}
 \Xafterlemmaseparator{0.4em}
-\Xbeforelemmaseparator{-0.17em}
+\Xbeforelemmaseparator{-0.1em}
 \Xafternumber{0.4em}
 %
 \prenotesX{11pt}
