--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -224,6 +224,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \end{itemize} 
 \newpage
 %
+\addcontentsline{toc}{section}{\emph{Coplas}}
 \beginnumbering
 \begin{center}
 		[I]\footnoteA{[I] {\fontsize{7.5}{9}\selectfont INCIPIT} = Coplas que fiço don jorje manrriq\emph{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\emph{ue} su padre \emph{LB3}; Dezir de don jorge manrriq\emph{ue} por la muerte de su padre \emph{82*JM}; De don jorge manrique por la muerte de su padre \emph{86*RL}; Coplas de do\emph{n} jorge ma\emph{n}riq\emph{ue} a la muerte del maestre don rrod\emph{rig}o ma\emph{n}riq\emph{ue} su padre \emph{HH1}; Coplas que hizo do\emph{n} jorge manrriq\emph{ue} ala muerte del maestre de santiago do\emph{n} rodrigo manrique su padre \emph{83*IM}.}
