--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -230,7 +230,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 		[I]\footnoteA{[I] {\fontsize{7.5}{9}\selectfont INCIPIT} = Coplas que fiço don jorje manrriq\emph{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\emph{ue} su padre \emph{LB3}; Dezir de don jorge manrriq\emph{ue} por la muerte de su padre \emph{82*JM}; De don jorge manrique por la muerte de su padre \emph{86*RL}; Coplas de do\emph{n} jorge ma\emph{n}riq\emph{ue} a la muerte del maestre don rrod\emph{rig}o ma\emph{n}riq\emph{ue} su padre \emph{HH1}; Coplas que hizo do\emph{n} jorge manrriq\emph{ue} ala muerte del maestre de santiago do\emph{n} rodrigo manrique su padre \emph{83*IM}.}
 \end{center}
 \pstart
-{\fontsize{9}{11}\selectfont RECUERDE\footnoteE{\comillas{Recuerde} no tiene la acepción de \comillas{traer a la memoria}, sino la de \comillas{despertar} y, para ello, el \emph{Tesoro de la lengua castellana} de \textcite{Covarrubias1611} registra para el vocablo \emph{recordar} \comillas{despertar el que duerme, o boluer en acuerdo, del verbo recordor}. Posteriormente se registró el significado \comillas{Metaphoricamente vale despertar al que está dormido} (\emph{Autoridades}, 2ª acepción).} EL ALMA} dormida,\\
+\textsc{Recuerde}\footnoteE{\comillas{Recuerde} no tiene la acepción de \comillas{traer a la memoria}, sino la de \comillas{despertar} y, para ello, el \emph{Tesoro de la lengua castellana} de \textcite{Covarrubias1611} registra para el vocablo \emph{recordar} \comillas{despertar el que duerme, o boluer en acuerdo, del verbo recordor}. Posteriormente se registró el significado \comillas{Metaphoricamente vale despertar al que está dormido} (\emph{Autoridades}, 2ª acepción).} \textsc{el alma} dormida,\\
 avive el seso y despierte\\
 contenplando\\
 cómo se pasa la vida,\\
