--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -9,8 +9,8 @@
 \usepackage[backend=biber,style=apa,url=true]{biblatex}
 \addbibresource{bibliography.bib}
 \title{COPLAS SOBRE LA MVERTE DE SV PADRE}
-\author{\fontsize{14}{11.96}\selectfont JORGE MANRIQVE}
-\date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
+\author{\fontsize{14}{11.96}\selectfont \textsc{Jorge Manriqve}}
+\date{\vspace{60pt}\fontsize{12}{11}\selectfont{\textsc{Edición crítica liminar}}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
 \setmainfont{TemporaNR}[Numbers={OldStyle,Proportional}] %Modified XITS font with addition of TironianEt (U+204A) combinated with IFAO-Grec Unicode of Jean-Luc Fournet and Ralph Hancock with modified part of oldstyle figures and somes philological glyphs.
 \setdefaultlanguage{spanish}
@@ -66,7 +66,7 @@
 \hskip0pt
 \vfill
 \begin{flushright}
-	Edición preparada por {\fontsize{9}{1}\selectfont IOHANNES BRACLEDIVS} y compuesta en\\ LuaLaTeX con el paquete Reledmac de {\fontsize{9}{11}\selectfont MAÏAEVL ROVQVETTE}.
+	Edición preparada por \textsc{Iohannes Bracledivs} y compuesta en\\ LuaLaTeX con el paquete Reledmac de \textsc{Maïaevl Rovqvette}.
 \end{flushright}
 \newpage
 %
