--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -176,7 +176,7 @@ Las contracciones se separan sin indicación alguna. Las grafías en cursiva cor
 %
 El orden de las coplas que se sigue es el de \emph{LB3} que, a su vez, coincide con el orden y conclusiones de \textcite{Senabre1983}, \textcite{Palumbo1983}, \textcite{Orduna1967}, \textcite{Beltrán1991,Beltrán2013}, \textcite{PérezPriego1990,PérezPriego2017} y \parencite{Foulché-Delbosc1902}, descartando el orden de \emph{82*JM}.\par
 %
-Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y las explicaciones adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante --si se coloca \comillas{||}, indicará que aún continúa en el mismo pasaje--, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteE{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Se eludirán variantes gráficas y de espacio. Las explicaciones contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base y plausibles interpretaciones.\par
+Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y las explicaciones adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante --si se coloca \comillas{\char"02016}, indicará que aún continúa en el mismo pasaje--, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteE{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Se eludirán variantes gráficas y de espacio. Las explicaciones contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base y plausibles interpretaciones.\par
 
 \section*{\centering\fontsize{11}{14}\selectfont BIBLIOGRAFÍA}
 \addcontentsline{toc}{section}{Bibliografía}
