--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -8,9 +8,9 @@
 \usepackage{tikz}
 \usepackage[backend=biber,style=apa,url=true]{biblatex}
 \addbibresource{bibliography.bib}
-\title{COPLAS SOBRE LA MVERTE DE SV PADRE}
+\title{\huge\textsc{Coplas sobre la mverte de sv padre}}
 \author{\fontsize{14}{11.96}\selectfont \textsc{Jorge Manriqve}}
-\date{\vspace{60pt}\fontsize{12}{11}\selectfont{\textsc{Edición crítica liminar}}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
+\date{\vspace{60pt}\fontsize{12}{11}\selectfont{\textsc{edición crítica liminar}}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
 \setmainfont{TemporaNR}[Numbers={OldStyle,Proportional}] %Modified XITS font with addition of TironianEt (U+204A) combinated with IFAO-Grec Unicode of Jean-Luc Fournet and Ralph Hancock with modified part of oldstyle figures and somes philological glyphs.
 \setdefaultlanguage{spanish}
@@ -83,7 +83,7 @@
 %
 \pagenumbering{arabic}
 \setcounter{page}{1}
-\section*{\centering\normalsize PREFACIO}
+\section*{\centering\normalsize \textsc{Prefacio}}
 \addcontentsline{toc}{section}{Prefacio}
 
 Jorge Manrique nació ca. 1440 y falleció en abril de 1479. Una noticia de su fallecimiento la transmitió Fernando del Pulgar en su \emph{Crónica de los reyes Católicos}:\par
@@ -96,7 +96,7 @@ El título, \emph{Coplas sobre la muerte de su padre}, resulta un tanto arbitrar
 %
 No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \emph{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 --seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor-- que aparece en un impreso en carácter de \emph{editio princeps}. Es necesario destacar que los textos de Manrique solo se conservaron disueltos en cancioneros, a diferencia de otros autores como Luis de Góngora, quien gozó de \comillas{colecciones} con su obra, constituyendo así un auténtico \emph{corpus}, como puede observarse en el \emph{Códice Chacón} en la BNE.\par
 
-\subsection*{\centering\normalsize TESTIMONIOS\footnoteE{Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \emph{El cancionero del s. XV (ca. 1360-1520)} [7 vols.].}}
+\subsection*{\centering\normalsize \textsc{Testimonios}\footnoteE{Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \emph{El cancionero del s. XV (ca. 1360-1520)} [7 vols.].}}
 \addcontentsline{toc}{subsection}{Testimonios}
 
 {\eg} = \emph{Cancionero de Egerton} (British Library, Eg. 939).
@@ -125,7 +125,7 @@ Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fol
 \relax
 \vfill
 
-\subsection*{\centering\normalsize CRITERIOS DE EDICIÓN}
+\subsection*{\centering\normalsize \textsc{Criterios de edición}}
 \addcontentsline{toc}{subsection}{Criterios de edición}
 
 Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \emph{α} del \emph{stemma codicum} construido por el segundo. Descartando el subarquetipo \emph{β}, siendo {\im} su testimonio más representativo\footnoteE{Aunque el subarquetipo \emph{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \emph{X} --esto es, \emph{EM6} y \emph{PN1}--, a efectos prácticos de esta edición liminar se utilizó únicamente {\im} por ser el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013}.}, la filiación de los testimonios se resumiría con el siguiente \emph{stemma} reducido a partir de lo anteriormente indicado\footnoteE{Para el \emph{stemma} completo \emph{cfr.} \textcite[103]{PérezPriego2017}.}:\par
@@ -186,20 +186,20 @@ El orden de las coplas que se sigue es el de {\eg} que, a su vez, coincide con e
 %
 Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y las explicaciones adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante --si se coloca \comillas{\char"02016}, indicará que aún continúa en el mismo pasaje--, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteE{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Se eludirán variantes gráficas y de espacio. Las explicaciones contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base y plausibles interpretaciones.\par
 
-\section*{\centering\normalsize BIBLIOGRAFÍA}
+\section*{\centering\normalsize \textsc{Bibliografía}}
 \addcontentsline{toc}{section}{Bibliografía}
 \nocite{*}
 \printbibliography[heading=none]
 \newpage
 
-\section*{\centering\normalsize TEXTO Y APARATO CRÍTICOS}
+\section*{\centering\normalsize \textsc{Texto y aparato críticos}}
 \addcontentsline{toc}{section}{Texto y aparato críticos}
 \newpage
 
-\section*{\centering\normalsize CONSPECTVS SIGLORVM}
+\section*{\centering\normalsize \textsc{Conspectvs siglorvm}}
 \addcontentsline{toc}{section}{Conspectus siglorum}
 
-\subsection*{\centering\small SIGLA TESTIMONIORVM}
+\subsection*{\centering\small \textsc{Sigla testimoniorvm}}
 \addcontentsline{toc}{subsection}{Sigla testimoniorum}
 \vspace*{-2.5pt}
 \begin{itemize}[label=,leftmargin=0.6cm]%
@@ -211,7 +211,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \item {\im} = \emph{Cancionero de fray Íñigo de Mendoza}, 1483?%
 \end{itemize}
 
-\subsection*{\centering\small SIGLA APPARATI CRITICI}
+\subsection*{\centering\small \textsc{Sigla apparati critici}}
 \addcontentsline{toc}{subsection}{Sigla apparati critici}
 \vspace*{-2.5pt}
 \begin{itemize}[label=,leftmargin=0.6cm]%
@@ -966,7 +966,7 @@ su memoria.\par
 \relax
 \newpage
 
-\section*{\centering\fontsize{11}{14}\selectfont APÉNDICE}
+\section*{\centering\normalsize \textsc{Apéndice}}
 \addcontentsline{toc}{section}{Apéndice}
 
 Coplas apócrifas o póstumas en la \emph{Glosa Famossisima} de Alonso de Cervantes, ubicadas entre las coplas XXIV y XXV. Texto fijado por \textcite{Foulché-Delbosc1902}.\vspace{5pt}
@@ -1011,8 +1011,8 @@ Coplas apócrifas o póstumas en la \emph{Glosa Famossisima} de Alonso de Cervan
 \end{pairs}
 	\Columns
 
-\vspace{11pt} Tras la copla XL, en {\im} yace un epitafio con la rúbrica \comillas{En su sepultura dize desta manera}, que enuncia:\vspace{5pt}
-
+\vspace{11pt} Tras la copla XL, en {\im} yace un epitafio con la rúbrica \comillas{En su sepultura dize desta manera}, que enuncia:\vspace{5pt}\par
+%
 \comillas{Aquí yaze muerto el ombre\\
 	que vivo queda su nombre}.\footnoteE{Beltrán, citando a Luis de Salazar y Castro, recupera «AQVI YACE MVERTO VN HOMBRE, QVE VIVO DEJO SV NOMBRE» \parencite[158]{Beltrán1991}.}
 \relax
