--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -8,9 +8,9 @@
 \usepackage{tikz}
 \usepackage[backend=biber,style=apa,url=true]{biblatex}
 \addbibresource{bibliography.bib}
-\title{\huge\textsc{Coplas sobre la mverte de sv padre}}
-\author{\fontsize{14}{11.96}\selectfont \textsc{Jorge Manriqve}}
-\date{\vspace{60pt}\fontsize{12}{11}\selectfont{\textsc{edición crítica liminar}}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
+\title{\huge COPLAS SOBRE LA MVERTE DE SV PADRE}
+\author{\fontsize{14}{11.96}\selectfont JORGE MANRIQVE}
+\date{\vspace{60pt}\fontsize{12}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
 \setmainfont{TemporaNR}[Numbers={OldStyle,Proportional}] %Modified XITS font with addition of TironianEt (U+204A) combinated with IFAO-Grec Unicode of Jean-Luc Fournet and Ralph Hancock with modified part of oldstyle figures and somes philological glyphs.
 \setdefaultlanguage{spanish}
@@ -83,12 +83,12 @@
 %
 \pagenumbering{arabic}
 \setcounter{page}{1}
-\section*{\centering\normalsize \textsc{Prefacio}}
+\section*{\centering\normalsize PREFACIO}
 \addcontentsline{toc}{section}{Prefacio}
 
 Jorge Manrique nació ca. 1440 y falleció en abril de 1479. Una noticia de su fallecimiento la transmitió Fernando del Pulgar en su \emph{Crónica de los reyes Católicos}:\par
 %
-\comillas{[...] \emph{peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca de las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}}\footnoteE{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \emph{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120r; en la ed. de 1780 [Valencia], en \comillas{Segunda parte}, cap. LXXXII, pág. 146.}\par
+\comillas{... \emph{peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca de las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}}\footnoteE{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \emph{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120r; en la ed. de 1780 [Valencia], en \comillas{Segunda parte}, cap. LXXXII, pág. 146.}\par
 %
 Las \emph{Coplas sobre la muerte de su padre} son una \comillas{colección} de coplas compuestas y dedicadas a don Rodrigo Manrique, padre del autor y maestre de la Orden de Santiago, hacia finales de 1476, tras su fallecimiento. El texto presenta una figura ensalzada del maestre como victorioso guerrero que \comillas{\emph{fizo guerras a moros}} [\emph{bellator}], hombre virtuoso y católico honrado, detalles apreciables con claridad, puesto que separa la vivencia en la \emph{fama} de la \emph{terrenal} y la \emph{trascendente}. Utiliza la \comillas{copla de pie quebrado} o \comillas{sextina manriqueña} --cuatro octosílabos y dos tetrasílabos con rimas consonantes--, lenguaje llano y culto, y posee erudición histórica, filosófica y teológica.\par
 %
@@ -96,7 +96,7 @@ El título, \emph{Coplas sobre la muerte de su padre}, resulta un tanto arbitrar
 %
 No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \emph{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 --seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor-- que aparece en un impreso en carácter de \emph{editio princeps}. Es necesario destacar que los textos de Manrique solo se conservaron disueltos en cancioneros, a diferencia de otros autores como Luis de Góngora, quien gozó de \comillas{colecciones} con su obra, constituyendo así un auténtico \emph{corpus}, como puede observarse en el \emph{Códice Chacón} en la BNE.\par
 
-\subsection*{\centering\normalsize \textsc{Testimonios}\footnoteE{Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \emph{El cancionero del s. XV (ca. 1360-1520)} [7 vols.].}}
+\subsection*{\centering\normalsize TESTIMONIOS\footnoteE{Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \emph{El cancionero del s. XV (ca. 1360-1520)} [7 vols.].}}
 \addcontentsline{toc}{subsection}{Testimonios}
 
 {\eg} = \emph{Cancionero de Egerton} (British Library, Eg. 939).
@@ -125,7 +125,7 @@ Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fol
 \relax
 \vfill
 
-\subsection*{\centering\normalsize \textsc{Criterios de edición}}
+\subsection*{\centering\normalsize CRITERIOS DE EDICIÓN}
 \addcontentsline{toc}{subsection}{Criterios de edición}
 
 Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \emph{α} del \emph{stemma codicum} construido por el segundo. Descartando el subarquetipo \emph{β}, siendo {\im} su testimonio más representativo\footnoteE{Aunque el subarquetipo \emph{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \emph{X} --esto es, \emph{EM6} y \emph{PN1}--, a efectos prácticos de esta edición liminar se utilizó únicamente {\im} por ser el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013}.}, la filiación de los testimonios se resumiría con el siguiente \emph{stemma} reducido a partir de lo anteriormente indicado\footnoteE{Para el \emph{stemma} completo \emph{cfr.} \textcite[103]{PérezPriego2017}.}:\par
@@ -186,20 +186,20 @@ El orden de las coplas que se sigue es el de {\eg} que, a su vez, coincide con e
 %
 Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y las explicaciones adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante --si se coloca \comillas{\char"02016}, indicará que aún continúa en el mismo pasaje--, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteE{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Se eludirán variantes gráficas y de espacio. Las explicaciones contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base y plausibles interpretaciones.\par
 
-\section*{\centering\normalsize \textsc{Bibliografía}}
+\section*{\centering\normalsize BIBLIOGRAFÍA}
 \addcontentsline{toc}{section}{Bibliografía}
 \nocite{*}
 \printbibliography[heading=none]
 \newpage
 
-\section*{\centering\normalsize \textsc{Texto y aparato críticos}}
+\section*{\centering\normalsize TEXTO Y APARATO CRÍTICOS}
 \addcontentsline{toc}{section}{Texto y aparato críticos}
 \newpage
 
-\section*{\centering\normalsize \textsc{Conspectvs siglorvm}}
+\section*{\centering\normalsize CONSPECTVS SIGLORVM}
 \addcontentsline{toc}{section}{Conspectus siglorum}
 
-\subsection*{\centering\small \textsc{Sigla testimoniorvm}}
+\subsection*{\centering\small SIGLA TESTIMONIORVM}
 \addcontentsline{toc}{subsection}{Sigla testimoniorum}
 \vspace*{-2.5pt}
 \begin{itemize}[label=,leftmargin=0.6cm]%
@@ -211,7 +211,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \item {\im} = \emph{Cancionero de fray Íñigo de Mendoza}, 1483?%
 \end{itemize}
 
-\subsection*{\centering\small \textsc{Sigla apparati critici}}
+\subsection*{\centering\small SIGLA APPARATI CRITICI}
 \addcontentsline{toc}{subsection}{Sigla apparati critici}
 \vspace*{-2.5pt}
 \begin{itemize}[label=,leftmargin=0.6cm]%
@@ -930,7 +930,7 @@ q\emph{ua}ndo Dios q\emph{ui}ere q\emph{ue} muera,\\
 \end{center}
 \pstart
 »Tú, q\emph{ue} por n\emph{uest}ra maldat\\
-tomaste forma \edtext{çevil}{\lemma{çeuil}\Afootnote{seruil {\rl}, {\mn}}}\footnoteE{«çeuil» tiene la acepción de «villano», hombre de la villa, opuesto a noble, según \textcite{Lida1947}, quien expone una serie de testimonios tales como \emph{Triunfos} de Juan de Padilla, el Cartujano, y \emph{Diálogo de la lengua} de Juan de Valdés, más otros para ilustrar la historia semántica del vocablo, unido a su hipótesis de que \emph{civil} tenía una acepción adicional, «cruel», según textos de don Juan de Mena. El \emph{Tesoro de la lengua castellana} de \textcite{Covarrubias1611} registra para \emph{cevil} la definición «hombre apocado, y miserable, de ce, que acrecienta la sinificacion, y de vil, que valdra muy vil». A esto acompaña la definición para \emph{civil} «desestimable, mezquino, ruin, y de baxa condicion y procedéres» (\emph{Autoridades}, 3ª acepción), que recuerdan \textcite{CorominasYPascual1980-1991} y añaden «[...] actualmente ya se ha anticuado, pero de la que hay multitud de ejemplos desde la \emph{Gr. Conq. de Ultr.} hasta el s. XVII (Salas Barbadillo)». Orduna sostiene que la copla «reproduce en sus cuatro partes evidentes el mismo esquema de motivos. Los primeros 9 versos resumen la invocación a Cristo Salvador del grupo 4-6, llevándola a un plano de comunicación directa [...] los últimos 3 versos concluyen la Oración [...] con el sometimiento total a la clemencia del Salvador» \parencite[145-146]{Orduna1967}; pero esto lo sostiene --siguiendo a \textcite{Foulché-Delbosc1912}-- con la lección \emph{servil}, que \textcite{Beltrán1991,Beltrán2013} descarta por \emph{lectio facilior}.}\\
+tomaste forma \edtext{çevil}{\lemma{çeuil}\Afootnote{seruil {\rl}, {\mn}}}\footnoteE{«çeuil» tiene la acepción de «villano», hombre de la villa, opuesto a noble, según \textcite{Lida1947}, quien expone una serie de testimonios tales como \emph{Triunfos} de Juan de Padilla, el Cartujano, y \emph{Diálogo de la lengua} de Juan de Valdés, más otros para ilustrar la historia semántica del vocablo, unido a su hipótesis de que \emph{civil} tenía una acepción adicional, «cruel», según textos de don Juan de Mena. El \emph{Tesoro de la lengua castellana} de \textcite{Covarrubias1611} registra para \emph{cevil} la definición «hombre apocado, y miserable, de ce, que acrecienta la sinificacion, y de vil, que valdra muy vil». A esto acompaña la definición para \emph{civil} «desestimable, mezquino, ruin, y de baxa condicion y procedéres» (\emph{Autoridades}, 3ª acepción), que recuerdan \textcite{CorominasYPascual1980-1991} y añaden «... actualmente ya se ha anticuado, pero de la que hay multitud de ejemplos desde la \emph{Gr. Conq. de Ultr.} hasta el s. XVII (Salas Barbadillo)». Orduna sostiene que la copla «reproduce en sus cuatro partes evidentes el mismo esquema de motivos. Los primeros 9 versos resumen la invocación a Cristo Salvador del grupo 4-6, llevándola a un plano de comunicación directa [...] los últimos 3 versos concluyen la Oración [...] con el sometimiento total a la clemencia del Salvador» \parencite[145-146]{Orduna1967}; pero esto lo sostiene --siguiendo a \textcite{Foulché-Delbosc1912}-- con la lección \emph{servil}, que \textcite{Beltrán1991,Beltrán2013} descarta por \emph{lectio facilior}.}\\
 y \edtext{baxo}{\Afootnote{\emph{om.} {\jm}}} no\emph{n}bre;\\
 \edtext{Tú, que a tu divinidat}{\lemma{tu que a tu}\Afootnote{juntaste {\jm}}}\\
 ju\emph{n}taste \edtext{cosa}{\Afootnote{avna cosa {\jm}}} ta\emph{n} vil\\
@@ -966,7 +966,7 @@ su memoria.\par
 \relax
 \newpage
 
-\section*{\centering\normalsize \textsc{Apéndice}}
+\section*{\centering\normalsize APÉNDICE}
 \addcontentsline{toc}{section}{Apéndice}
 
 Coplas apócrifas o póstumas en la \emph{Glosa Famossisima} de Alonso de Cervantes, ubicadas entre las coplas XXIV y XXV. Texto fijado por \textcite{Foulché-Delbosc1902}.\vspace{5pt}
