--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -9,8 +9,8 @@
 \usepackage[backend=biber,style=apa,url=true]{biblatex}
 \addbibresource{bibliography.bib}
 \title{\huge COPLAS SOBRE LA MVERTE DE SV PADRE}
-\author{\fontsize{14}{11.96}\selectfont JORGE MANRIQVE}
-\date{\vspace{60pt}\fontsize{12}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
+\author{JORGE MANRIQVE}
+\date{\vspace{60pt}\small EDICIÓN CRÍTICA LIMINAR\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
 \setmainfont{TemporaNR}[Numbers={OldStyle,Proportional}] %Modified XITS font with addition of TironianEt (U+204A) combinated with IFAO-Grec Unicode of Jean-Luc Fournet and Ralph Hancock with modified part of oldstyle figures and somes philological glyphs.
 \setdefaultlanguage{spanish}
