--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -9,10 +9,10 @@
 \usepackage[backend=biber,style=apa,url=true]{biblatex}
 \addbibresource{bibliography.bib}
 \title{\huge COPLAS SOBRE LA MVERTE DE SV PADRE}
-\author{JORGE MANRIQVE}
-\date{\vspace{60pt}\small EDICIÓN CRÍTICA LIMINAR\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
+\author{\huge\textsc{Jorge Manriqve}}
+\date{\vspace{60pt} \textsc{Edición crítica liminar}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
-\setmainfont{TemporaNR}[Numbers={OldStyle,Proportional}] %Modified XITS font with addition of TironianEt (U+204A) combinated with IFAO-Grec Unicode of Jean-Luc Fournet and Ralph Hancock with modified part of oldstyle figures and somes philological glyphs.
+\setmainfont{TemporaSerif}[Numbers=OldStyle] %Modified LibertinusSerif font with changes in TironianEt (U+204A), and modifies in part of oldstyle figures and somes philological glyphs.
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 %
@@ -74,7 +74,7 @@
 \hskip0pt
 \vfill
 \begin{flushright}
-	Edición preparada por \textsc{Iohannes Bracledivs} y compuesta en\\ LuaLaTeX con el paquete Reledmac de \textsc{Maïaevl Rovqvette}.
+	Edición preparada por \textsc{Iohannes Bracledivs} y compuesta\\ en LuaLaTeX con el paquete Reledmac de \textsc{Maïaevl Rovqvette}.
 \end{flushright}
 \newpage
 %
@@ -83,25 +83,28 @@
 %
 \pagenumbering{arabic}
 \setcounter{page}{1}
-\section*{\centering\normalsize PREFACIO}
-\addcontentsline{toc}{section}{Prefacio}
+\section*{\centering \textsc{Prefacio}}
+\addcontentsline{toc}{section}{\textsc{Prefacio}}
 
-Jorge Manrique nació ca. 1440 y falleció en abril de 1479. Una noticia de su fallecimiento la transmitió Fernando del Pulgar en su \emph{Crónica de los reyes Católicos}:\par
+Jorge Manrique nació ca. 1440 y murió en abril de 1479. Una noticia de su muerte la transmitió Fernando del Pulgar en su \emph{Crónica de los reyes Católicos}:\par
 %
-\comillas{... \emph{peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca de las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}}\footnoteE{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \emph{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120r; en la ed. de 1780 [Valencia], en \comillas{Segunda parte}, cap. LXXXII, pág. 146.}\par
+\comillas{... peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca de las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}\footnoteE{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \emph{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120r; en la ed. de 1780 (Valencia), en \comillas{Segunda parte}, cap. LXXXII, pág. 146.}\par
 %
-Las \emph{Coplas sobre la muerte de su padre} son una \comillas{colección} de coplas compuestas y dedicadas a don Rodrigo Manrique, padre del autor y maestre de la Orden de Santiago, hacia finales de 1476, tras su fallecimiento. El texto presenta una figura ensalzada del maestre como victorioso guerrero que \comillas{\emph{fizo guerras a moros}} [\emph{bellator}], hombre virtuoso y católico honrado, detalles apreciables con claridad, puesto que separa la vivencia en la \emph{fama} de la \emph{terrenal} y la \emph{trascendente}. Utiliza la \comillas{copla de pie quebrado} o \comillas{sextina manriqueña} --cuatro octosílabos y dos tetrasílabos con rimas consonantes--, lenguaje llano y culto, y posee erudición histórica, filosófica y teológica.\par
+Las \emph{Coplas sobre la muerte de su padre} son una \comillas{colección} de coplas compuestas y dedicadas a don Rodrigo Manrique, padre del autor y maestre de la Orden de Santiago, hacia fines de 1476, tras su muerte. El texto presenta una figura ensalzada del maestre como victorioso guerrero que \comillas{fizo guerras a moros} [\emph{bellator}], hombre virtuoso y católico honrado, detalles apreciables con claridad, puesto que separa la vivencia en la \emph{fama} de la \emph{terrenal} y la \emph{trascendente}. Utiliza la \comillas{copla de pie quebrado} o \comillas{sextina manriqueña} --cuatro octosílabos y dos tetrasílabos con rimas consonantes--, lenguaje llano y culto, y posee erudición histórica, filosófica y teológica.\par
 %
 El título, \emph{Coplas sobre la muerte de su padre}, resulta un tanto arbitrario si se analizan las rúbricas que la tradición textual transmitió: los testimonios transmitieron \comillas{dezir} (\jm), \comillas{coplas} (\eg, \hh, \im) y algún otro \comillas{De don jorge manrique} (\rl). Parece evidente, pues, que el título no es reconstruible, porque todos aquellos indican el \comillas{tema} o \comillas{motivación} y, además, hace referencia a la estructura formal de la composición; y aunque por mayoría se prefiere \comillas{coplas}, no resulta sensato sostener que aquel, en sus variantes, es el título propiamente de la \comillas{colección}. Es probable que, como algunos textos medievales, este no se haya concebido con un título como tal.\par
 %
-No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \emph{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 --seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor-- que aparece en un impreso en carácter de \emph{editio princeps}. Es necesario destacar que los textos de Manrique solo se conservaron disueltos en cancioneros, a diferencia de otros autores como Luis de Góngora, quien gozó de \comillas{colecciones} con su obra, constituyendo así un auténtico \emph{corpus}, como puede observarse en el \emph{Códice Chacón} en la BNE.\par
+No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \emph{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 --seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor-- que aparece en un impreso en carácter de \emph{editio princeps}. Es necesario destacar que los textos de Manrique solo se conservaron disueltos en cancioneros, a diferencia de otros autores como Luis de Góngora, que gozó de \comillas{colecciones} con su obra, constituyendo así un auténtico \emph{corpus}, como puede observarse en el \emph{Códice Chacón} en la BNE.\par
 
-\subsection*{\centering\normalsize TESTIMONIOS\footnoteE{Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \emph{El cancionero del s. XV (ca. 1360-1520)} [7 vols.].}}
-\addcontentsline{toc}{subsection}{Testimonios}
-
+\section*{\centering \textsc{Testimonios}}
+\addcontentsline{toc}{subsection}{\textsc{Testimonios}}
+%
+Para las siglas de los testimonios se adoptaron las utilizadas por \textcite{PérezPriego2017} quien, a su vez, 
+las adoptó de Dutton y su \emph{El cancionero del s. XV (ca. 1360-1520)} [7 vols.]. Los testimonios son:\par
+%
 {\eg} = \emph{Cancionero de Egerton} (British Library, Eg. 939).
 %
-Manuscrito en papel con marcas de agua de finales de los 1470 o inicios de los 1480; 19x14,5cm.; escritura gótica cortesana, copista castellano; copia de un genuino llevado a cabo en la corte de Navarra; contiene textos poéticos y epistolares; 3 guardas [2 al inicio y 1 de cierre] y 122 fols.; los ff. 15r--18v contienen las coplas con la rúbrica \comillas{¶Coplas que fiço don jorje manrriq\emph{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\emph{ue} su padre}; la copla XL estuvo incompleta, pero otra redacción la completó en los pasajes restantes con una escritura gótica descuidada, escrita en los espacios restantes del f. 18v, porque el fol. central [primitivo f. 19v] no se conservó: tras aquel debía continuar el texto del \emph{Infante Epitus} \textcite{Beltrán2011}; \comillas{cancionero pro-Isabelino} \parencite{Severin2000}. <\url{https://www.cervantesvirtual.com/nd/ark:/59851/bmcj1034}>\par
+Manuscrito en papel con marcas de agua de fines de los 1470 o inicios de los 1480; 19x14,5cm.; escritura gótica cortesana, copista castellano; copia de un genuino llevado a cabo en la corte de Navarra; contiene textos poéticos y epistolares; 3 guardas [2 al inicio y 1 de cierre] y 122 fols.; los ff. 15r--18v contienen las coplas con la rúbrica \comillas{¶Coplas que fiço don jorje manrriq\emph{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\emph{ue} su padre}; la copla XL estuvo incompleta, pero otra redacción la completó en los pasajes restantes con una escritura gótica descuidada, escrita en los espacios restantes del f. 18v, porque el fol. central [primitivo f. 19v] no se conservó: tras aquel debía continuar el texto del \emph{Infante Epitus} \textcite{Beltrán2011}; \comillas{cancionero pro-Isabelino} \parencite{Severin2000}. <\url{https://www.cervantesvirtual.com/nd/ark:/59851/bmcj1034}>\par
 
 {\jm} = \emph{Vita Christi por fray Íñigo de Mendoza} (RBME, 100-II-17).
 %
@@ -117,7 +120,7 @@ Manuscrito en papel; 28x20,6cm.; escritura gótica del s. XV con rasgos de corte
 
 {\mn} = \emph{Cancionero de Pero Guillén de Segovia} (BNE, MS/4114).
 %
-Manuscrito en papel; 21x15cm.; copia del s. XVIII de un manuscrito de finales del s. XV (Pérez Priego, 2017; Beltrán, 1991); 6 guardas [3 al inicio y 3 de cierre] y 731 fols.; los ff. 407r--418v contienen las coplas X-XL [acéfalo]. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000134993&page=1}>\par
+Manuscrito en papel; 21x15cm.; copia del s. XVIII de un manuscrito de fines del s. XV (Pérez Priego, 2017; Beltrán, 1991); 6 guardas [3 al inicio y 3 de cierre] y 731 fols.; los ff. 407r--418v contienen las coplas X-XL [acéfalo]. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000134993&page=1}>\par
 
 {\im} = \emph{Cancionero de fray Íñigo de Mendoza} (BNE, INC/897).
 %
@@ -125,8 +128,8 @@ Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fol
 \relax
 \vfill
 
-\subsection*{\centering\normalsize CRITERIOS DE EDICIÓN}
-\addcontentsline{toc}{subsection}{Criterios de edición}
+\section*{\centering \textsc{Criterios de edición}}
+\addcontentsline{toc}{subsection}{\textsc{Criterios de edición}}
 
 Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \emph{α} del \emph{stemma codicum} construido por el segundo. Descartando el subarquetipo \emph{β}, siendo {\im} su testimonio más representativo\footnoteE{Aunque el subarquetipo \emph{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \emph{X} --esto es, \emph{EM6} y \emph{PN1}--, a efectos prácticos de esta edición liminar se utilizó únicamente {\im} por ser el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013}.}, la filiación de los testimonios se resumiría con el siguiente \emph{stemma} reducido a partir de lo anteriormente indicado\footnoteE{Para el \emph{stemma} completo \emph{cfr.} \textcite[103]{PérezPriego2017}.}:\par
 
@@ -185,22 +188,23 @@ Las contracciones se separan sin indicación alguna. Las grafías en cursiva cor
 El orden de las coplas que se sigue es el de {\eg} que, a su vez, coincide con el orden y conclusiones de \textcite{Senabre1983}, \textcite{Palumbo1983}, \textcite{Orduna1967}, \textcite{Beltrán1991,Beltrán2013}, \textcite{PérezPriego1990,PérezPriego2017} y \parencite{Foulché-Delbosc1902}, descartando el orden de {\jm}.\par
 %
 Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y las explicaciones adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante --si se coloca \comillas{\char"02016}, indicará que aún continúa en el mismo pasaje--, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteE{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Se eludirán variantes gráficas y de espacio. Las explicaciones contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base y plausibles interpretaciones.\par
+\relax
 
-\section*{\centering\normalsize BIBLIOGRAFÍA}
-\addcontentsline{toc}{section}{Bibliografía}
+\section*{\centering \textsc{Bibliografía}}
+\addcontentsline{toc}{section}{\textsc{Bibliografía}}
 \nocite{*}
 \printbibliography[heading=none]
 \newpage
 
-\section*{\centering\normalsize TEXTO Y APARATO CRÍTICOS}
-\addcontentsline{toc}{section}{Texto y aparato críticos}
+\section*{\centering \textsc{Texto y aparato críticos}}
+\addcontentsline{toc}{section}{\textsc{Texto y aparato críticos}}
 \newpage
 
-\section*{\centering\normalsize CONSPECTVS SIGLORVM}
-\addcontentsline{toc}{section}{Conspectus siglorum}
+\section*{\centering \textsc{Conspectvs siglorvm}}
+\addcontentsline{toc}{section}{\textsc{Conspectvs siglorvm}}
 
-\subsection*{\centering\small SIGLA TESTIMONIORVM}
-\addcontentsline{toc}{subsection}{Sigla testimoniorum}
+\subsection*{\centering\normalsize \textsc{Sigla testimoniorvm}}
+\addcontentsline{toc}{subsection}{\textsc{Sigla testimoniorvm}}
 \vspace*{-2.5pt}
 \begin{itemize}[label=,leftmargin=0.6cm]%
 \item {\eg} = \emph{Cancionero de Egerton}, 1470?-1480?
@@ -211,8 +215,8 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \item {\im} = \emph{Cancionero de fray Íñigo de Mendoza}, 1483?%
 \end{itemize}
 
-\subsection*{\centering\small SIGLA APPARATI CRITICI}
-\addcontentsline{toc}{subsection}{Sigla apparati critici}
+\subsection*{\centering\normalsize \textsc{Sigla apparati critici}}
+\addcontentsline{toc}{subsection}{\textsc{Sigla apparati critici}}
 \vspace*{-2.5pt}
 \begin{itemize}[label=,leftmargin=0.6cm]%
 \item \emph{a. corr.} = ante correctionem.
@@ -232,7 +236,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \end{itemize} 
 \newpage
 %
-\addcontentsline{toc}{section}{\emph{Coplas}}
+\addcontentsline{toc}{section}{\emph{\textsc{Coplas}}}
 \beginnumbering
 \begin{center}
 		[I]\footnoteA{[I] \textsc{Incipit} = Coplas que fiço don jorje manrriq\emph{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\emph{ue} su padre {\eg}; Dezir de don jorge manrriq\emph{ue} por la muerte de su padre {\jm}; De don jorge manrique por la muerte de su padre {\rl}; Coplas de do\emph{n} jorge ma\emph{n}riq\emph{ue} a la muerte del maestre don rrod\emph{rig}o ma\emph{n}riq\emph{ue} su padre {\hh}; Coplas que hizo do\emph{n} jorge manrriq\emph{ue} ala muerte del maestre de santiago do\emph{n} rodrigo manrique su padre {\im}.}
@@ -809,7 +813,7 @@ las falló,\\
 mas por çercos y por guerras\\
 y por fuerça de sus manos\\ 
 las \edtext{cobró}{\lemma{cobro}\Afootnote{gano {\hh}}}.\par
-Pues nuestro rey natural,\edtext{}{\linenum{|||||380}\Afootnote[nosep]{\emph{transp.} {\eg}} = \comillas{si de las obras que obro / el nuestro Rey natural}}\\
+Pues nuestro rey natural,\edtext{}{\linenum{|||||380}\Afootnote[nosep]{\emph{transp.} {\eg} = \comillas{si de las obras que obro / el nuestro Rey natural}}}\\
 si de las obras que obró\\
 fue servido,\\
 dígalo el de Portugal,\\
@@ -965,9 +969,9 @@ su memoria.\par
 \vfill
 \relax
 \newpage
-
-\section*{\centering\normalsize APÉNDICE}
-\addcontentsline{toc}{section}{Apéndice}
+%
+\section*{\centering \textsc{Apéndice}}
+\addcontentsline{toc}{section}{\textsc{Apéndice}}
 
 Coplas apócrifas o póstumas en la \emph{Glosa Famossisima} de Alonso de Cervantes, ubicadas entre las coplas XXIV y XXV. Texto fijado por \textcite{Foulché-Delbosc1902}.\vspace{5pt}
 
@@ -1009,8 +1013,8 @@ Coplas apócrifas o póstumas en la \emph{Glosa Famossisima} de Alonso de Cervan
 		\endnumbering
 	\end{Rightside}
 \end{pairs}
-	\Columns
-
+	\Columns\par
+%
 \vspace{11pt} Tras la copla XL, en {\im} yace un epitafio con la rúbrica \comillas{En su sepultura dize desta manera}, que enuncia:\vspace{5pt}\par
 %
 \comillas{Aquí yaze muerto el ombre\\
