--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -12,7 +12,7 @@
 \author{\huge\textsc{Jorge Manriqve}}
 \date{\vspace{60pt} \textsc{Edición crítica liminar}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
-\setmainfont{TemporaSerif}[Numbers=OldStyle] %Modified LibertinusSerif font with changes in TironianEt (U+204A), and modifies in part of oldstyle figures and somes philological glyphs.
+\setmainfont{TemporaSerif}[Numbers=OldStyle]
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 %
@@ -90,17 +90,17 @@ Jorge Manrique nació ca. 1440 y murió en abril de 1479. Una noticia de su muer
 %
 \comillas{... peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca de las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}\footnoteE{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \emph{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120r; en la ed. de 1780 (Valencia), en \comillas{Segunda parte}, cap. LXXXII, pág. 146.}\par
 %
-Las \emph{Coplas sobre la muerte de su padre} son una \comillas{colección} de coplas compuestas y dedicadas a don Rodrigo Manrique, padre del autor y maestre de la Orden de Santiago, hacia fines de 1476, tras su muerte. El texto presenta una figura ensalzada del maestre como victorioso guerrero que \comillas{fizo guerras a moros} [\emph{bellator}], hombre virtuoso y católico honrado, detalles apreciables con claridad, puesto que separa la vivencia en la \emph{fama} de la \emph{terrenal} y la \emph{trascendente}. Utiliza la \comillas{copla de pie quebrado} o \comillas{sextina manriqueña} --cuatro octosílabos y dos tetrasílabos con rimas consonantes--, lenguaje llano y culto, y posee erudición histórica, filosófica y teológica.\par
+Las \emph{Coplas sobre la muerte de su padre} son una \comillas{colección} de coplas compuestas y dedicadas a don Rodrigo Manrique, padre del autor y maestre de la Orden de Santiago, hacia fines de 1476, tras su muerte. El texto presenta una figura ensalzada del maestre como victorioso guerrero que \comillas{fizo guerras a moros} [\emph{bellator}], hombre virtuoso y católico honrado. Utiliza la \comillas{copla de pie quebrado} o \comillas{sextina manriqueña} --cuatro octosílabos y dos tetrasílabos con rimas consonantes--, lenguaje llano y culto, y posee erudición histórica, filosófica y teológica.\par
 %
 El título, \emph{Coplas sobre la muerte de su padre}, resulta un tanto arbitrario si se analizan las rúbricas que la tradición textual transmitió: los testimonios transmitieron \comillas{dezir} (\jm), \comillas{coplas} (\eg, \hh, \im) y algún otro \comillas{De don jorge manrique} (\rl). Parece evidente, pues, que el título no es reconstruible, porque todos aquellos indican el \comillas{tema} o \comillas{motivación} y, además, hace referencia a la estructura formal de la composición; y aunque por mayoría se prefiere \comillas{coplas}, no resulta sensato sostener que aquel, en sus variantes, es el título propiamente de la \comillas{colección}. Es probable que, como algunos textos medievales, este no se haya concebido con un título como tal.\par
 %
-No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \emph{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 --seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor-- que aparece en un impreso en carácter de \emph{editio princeps}. Es necesario destacar que los textos de Manrique solo se conservaron disueltos en cancioneros, a diferencia de otros autores como Luis de Góngora, que gozó de \comillas{colecciones} con su obra, constituyendo así un auténtico \emph{corpus}, como puede observarse en el \emph{Códice Chacón} en la BNE.\par
+No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \emph{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 --seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor-- que aparece en un impreso en carácter de \emph{editio princeps}. Es necesario destacar que los textos de Manrique solo se conservaron disueltos en cancioneros, a diferencia de otro escritor como Luis de Góngora, que habría gozado de \comillas{colecciones} con su obra.\par
 
 \section*{\centering \textsc{Testimonios}}
 \addcontentsline{toc}{subsection}{\textsc{Testimonios}}
 %
 Para las siglas de los testimonios se adoptaron las utilizadas por \textcite{PérezPriego2017} quien, a su vez, 
-las adoptó de Dutton y su \emph{El cancionero del s. XV (ca. 1360-1520)} [7 vols.]. Los testimonios son:\par
+las adoptó de Dutton y su \emph{El cancionero del s. XV (ca. 1360-1520)}. Los testimonios son:\par
 %
 {\eg} = \emph{Cancionero de Egerton} (British Library, Eg. 939).
 %
