--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -100,7 +100,7 @@ No se conservaron autógrafos de alguna copla ni testimonios que puedan consider
 \addcontentsline{toc}{subsection}{\textsc{Testimonios}}
 %
 Para las siglas de los testimonios se adoptaron las utilizadas por \textcite{PérezPriego2017} quien, a su vez, 
-las adoptó de Dutton y su \emph{El cancionero del s. XV (ca. 1360-1520)}. Los testimonios son:\par
+las adoptó de Dutton y su trabajo \emph{El cancionero del s. XV (ca. 1360-1520)}. Los testimonios son:\par
 %
 {\eg} = \emph{Cancionero de Egerton} (British Library, Eg. 939).
 %
