--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -8,7 +8,7 @@
 \usepackage{tikz}
 \usepackage[backend=biber,style=apa,url=true]{biblatex}
 \addbibresource{bibliography.bib}
-\title{\huge COPLAS SOBRE LA MVERTE DE SV PADRE}
+\title{\huge \textbf{COPLAS SOBRE LA MVERTE DE SV PADRE}}
 \author{\huge\textsc{Jorge Manriqve}}
 \date{\vspace{60pt} \textsc{Edición crítica liminar}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
