--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -36,6 +36,8 @@
 \Xafterlemmaseparator{0.4em}
 \Xbeforelemmaseparator{-0.1em}
 \Xafternumber{0.4em}
+\linenummargin{right}
+\setlength{\linenumsep}{-6em}
 %
 \prenotesX{11pt}
 \afterruleX{2pt}
@@ -973,12 +975,10 @@ su memoria.\par
 \section*{\centering \textsc{Apéndice}}
 \addcontentsline{toc}{section}{\textsc{Apéndice}}
 
-Coplas apócrifas o póstumas en la \emph{Glosa Famossisima} de Alonso de Cervantes, ubicadas entre las coplas XXIV y XXV. Texto fijado por \textcite{Foulché-Delbosc1902}.\vspace{5pt}
-
-\begin{pairs}
-	\begin{Leftside}
-		\beginnumbering
-		\pstart
+Coplas apócrifas o póstumas en la \emph{Glosa Famossisima} de Alonso de Cervantes, ubicadas entre las coplas XXIV y XXV. Texto fijado por \textcite{Foulché-Delbosc1902}.\par\vspace{5pt}
+%
+\beginnumbering
+\pstart
 		Es tu comienço lloroso,\\
 		tu salida syempre amarga\\
 		y nunca buena,\\
@@ -993,8 +993,8 @@ Coplas apócrifas o póstumas en la \emph{Glosa Famossisima} de Alonso de Cervan
 		duran mas.\par
 		\pend
 		\endnumbering
-	\end{Leftside}
-	\begin{Rightside}
+		\vspace*{11pt}
+%
 		\beginnumbering
 		\pstart
 		O mundo, pues que nos matas,\\
@@ -1011,9 +1011,6 @@ Coplas apócrifas o póstumas en la \emph{Glosa Famossisima} de Alonso de Cervan
 		despoblada.\par
 		\pend
 		\endnumbering
-	\end{Rightside}
-\end{pairs}
-	\Columns\par
 %
 \vspace{11pt} Tras la copla XL, en {\im} yace un epitafio con la rúbrica \comillas{En su sepultura dize desta manera}, que enuncia:\vspace{5pt}\par
 %
