--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -36,8 +36,7 @@
 \Xafterlemmaseparator{0.4em}
 \Xbeforelemmaseparator{-0.1em}
 \Xafternumber{0.4em}
-\linenummargin{right}
-\setlength{\linenumsep}{-6em}
+\linenummargin{outer}
 %
 \prenotesX{11pt}
 \afterruleX{2pt}
