--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -75,7 +75,7 @@
 \hskip0pt
 \vfill
 \begin{flushright}
-	Edición y composición en LuaLaTeX con Reledmac\\ de \textsc{Maïaeul Rouquette} por \textsc{Ioannes Bracledius}.
+Edición y composición en LuaLaTeX con el paquete\\ Reledmac de \textsc{Maïaeul Rouquette} por \textsc{Ioannes Bracledius}.
 \end{flushright}
 \newpage
 %
@@ -87,7 +87,7 @@
 \section*{\centering \textsc{Prefacio}}
 \addcontentsline{toc}{section}{\textsc{Prefacio}}
 
-Jorge Manrique nació ca. 1440 y murió en abril de 1479. Una noticia de su muerte la transmitió Fernando del Pulgar en su \emph{Crónica de los reyes Católicos}:\par
+\textsc{Jorge Manrique nació} ca. 1440 y murió en abril de 1479. Una noticia de su muerte la transmitió Fernando del Pulgar en su \emph{Crónica de los reyes Católicos}:\par
 %
 \comillas{... peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca de las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}\footnoteE{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \emph{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120r; en la ed. de 1780 (Valencia), en \comillas{Segunda parte}, cap. LXXXII, pág. 146.}\par
 %
@@ -976,6 +976,9 @@ su memoria.\par
 
 Coplas apócrifas o póstumas en la \emph{Glosa Famossisima} de Alonso de Cervantes, ubicadas entre las coplas XXIV y XXV. Texto fijado por \textcite{Foulché-Delbosc1902}.\par\vspace{5pt}
 %
+\begin{center}
+[I]
+\end{center}
 \beginnumbering
 \pstart
 		Es tu comienço lloroso,\\
@@ -994,6 +997,9 @@ Coplas apócrifas o póstumas en la \emph{Glosa Famossisima} de Alonso de Cervan
 		\endnumbering
 		\vspace*{11pt}
 %
+\begin{center}
+[II]
+\end{center}
 		\beginnumbering
 		\pstart
 		O mundo, pues que nos matas,\\
@@ -1009,7 +1015,7 @@ Coplas apócrifas o póstumas en la \emph{Glosa Famossisima} de Alonso de Cervan
 		de plazeres y dulçores\\
 		despoblada.\par
 		\pend
-		\endnumbering
+		\endnumbering\par
 %
 \vspace{11pt} Tras la copla XL, en {\im} yace un epitafio con la rúbrica \comillas{En su sepultura dize desta manera}, que enuncia:\vspace{5pt}\par
 %
