--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -12,7 +12,7 @@
 \author{\huge\textsc{Jorge Manriqve}}
 \date{\vspace{60pt} \textsc{Edición crítica liminar}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
-\setmainfont{TemporaSerif}[Numbers=OldStyle]
+\setmainfont{TemporaNR}[RawFeature=onum]
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 %
