--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -7,6 +7,7 @@
 \usepackage{tikz}
 \usepackage[backend=biber,style=apa,url=true]{biblatex}
 \addbibresource{bibliography.bib}
+%
 \title{\huge \textbf{COPLAS SOBRE LA MVERTE DE SV PADRE}}
 \author{\huge\textsc{Jorge Manriqve}}
 \date{\vspace{60pt} \textsc{Edición crítica liminar}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
@@ -47,6 +48,7 @@
 %
 \usepackage{tocloft}
 \renewcommand{\cftsecleader}{\cftdotfill{\cftdotsep}}
+\renewcommand{\cfttoctitlefont}{\bfseries\scshape}
 %
 %Para que se cite correctamente el shortauthor.  
 \makeatletter
